--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -23,8 +23,10 @@
     "angular-material-icons": "^0.7.1",
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "jquery": "^1.9.1",
+    "moment": "^2.24.0",
     "ngx-socket-io": "^2.1.1",
     "popper.js": "^1.14.6",
     "rxjs": "^6.3.3",
